--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">Dice Roller July31</string>
-    <string name="roll">Roll</string>
-    <string name="number_1">1</string>
+    <string name="app_name">dice</string>
 </resources>
